1999-07-29  Adam Fedor  <fedor@gnu.org>

	* config.guess: Updated from latest version + fix for Netwinder.
	* config.sub: Likewise.

	* subproject.make: Add install targets for headers (Patch from
	Pedro Ivo Andrade Tavares <ptavares@iname.com>).

	* target.make: Add MacOSX target (from Helge Hess <hh@mdlink.de>).

1999-07-26  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstep.sh.in: Safe and restor value of IFS as suggested by
	prashant singh

1999-07-15  Adam Fedor  <fedor@gnu.org>

	* application.make: Force Info-gnustep.plist to be remade everytime

	* GNUstep.sh.in: Add $GNUSTEP_SYSTEM_ROOT/Libraries/man to MANPATH
	* GNUstep.csh.in: Likewise.

1999-07-14  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* target.make: Patch for threads on Solaris by bgg@itga.com.au

1999-07-05  Adam Fedor  <fedor@gnu.org>

        * configure.in: Fix prefix check.
	
1999-06-28  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstep.csh.in: Include Tools/host-cpu/host-os in path for any
	utilities that are installed without a startup script.
	* GNUstep.sh.in: ditto.

1999-06-24  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* common.make: include -Wall when building for debug

1999-06-16  Adam Fedor  <fedor@gnu.org>

	* executable.template.in: Add double quotes around $@ to quote
	arguments properly (Suggested by Roman Puttkammer
	<puttkamm.ny@fp.cibc.com>).

Fri Jun 11 17:23:59 1999  Adam Fedor  <fedor@ultra.doc.com>

	* executable.template.in: Fixes to work on Solaris

1999-06-03  Adam Fedor  <fedor@gnu.org>

	* ctool.make: New file for making C tools.
	* GNUmakefile.in: Install it.
	* whichlib.pl.in: Bug fixes.
	* GNUstep.csh.in: Fix up PATHPREFIX expansion 
	(patches and files from from Helge Hess <hh@mdlink.de>)

	* GNustep.sh.in: Insert GNUstep path before PATH.

1999-06-01  Adam Fedor  <fedor@gnu.org>

	* executable.template.in: New file to be used as shell script
	application/tool starter.
	* configure.in: Configure it.